fixed heading spacing

--- a/frontend/style/layout.scss
+++ b/frontend/style/layout.scss
@@ -15,6 +15,11 @@ body {
 
 .header{
     background-color: #032B43;
+    display: flex;
+    align-items: center;
+    :nth-child(1) {
+        flex: 1;
+    }
 }
 
 .dropbtn:hover .fa-caret-right{
@@ -34,7 +39,7 @@ body {
 }
 
 .dropbtn {
-    margin-left: 26px;
+    padding: 1em;
     color: #FFFFFF;
     font-size: 22px;
     line-height: 28px;
@@ -44,7 +49,6 @@ body {
     border-bottom: 1px solid rgba(255,255,255,0.5);
     background-color: #032B43;
     color: white;
-    padding: 16px;
     font-size: 30px;
     border: none;
     cursor: pointer;
@@ -56,18 +60,16 @@ body {
 }
 
 .dropdown-content {
-    margin-left: 26px;
     display: none;
     position: absolute;
     background-color: #193E5C;
-    min-width: 168px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
 
 .dropdown-content a {
     color: #ffffff;
-    padding: 12px 16px;
+    padding: 1em 1em;
     text-decoration: none;
     display: block;
 }
